// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`doesn't ignore node_modules with --with-node-modules flag (stderr) 1`] = `""`;

exports[`doesn't ignore node_modules with --with-node-modules flag (stdout) 1`] = `
"expand-dir/file.js
node_modules/node-module.js
not_node_modules/file.js
regular-module.js
"
`;

exports[`doesn't ignore node_modules with --with-node-modules flag (write) 1`] = `Array []`;

exports[`ignores node_modules by default (stderr) 1`] = `""`;

exports[`ignores node_modules by default (stdout) 1`] = `
"expand-dir/file.js
not_node_modules/file.js
regular-module.js
"
`;

exports[`ignores node_modules by default (write) 1`] = `Array []`;

exports[`should expand directories (stderr) 1`] = `""`;

exports[`should expand directories (stdout) 1`] = `
"expand-dir/file.js
"
`;

exports[`should expand directories (write) 1`] = `Array []`;
